--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap"
       rel="stylesheet"
     />
-    <title>Quartier</title>
+    <title>Do Bairro</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
